// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`formatNotificationAsString() should consistently format file scan notifications 1`] = `
"A file was scanned for moderation labels.

Message: A file was scanned
RecordName: test_record
FileName: fileName.txt
ResultId: test_result_id
BannedLabel: - label1 (0.5)
Labels: 
- label1 (0.5)
- label2 (0.6)
Time: 1970-01-01T00:00:00.123Z"
`;

exports[`formatNotificationAsString() should consistently format package version publish notifications 1`] = `
"A package_version_publish was created.

RecordName: test_record
Address: test_id
Version: v1.0.0
RequiresReview: false
Entitlements: []
Markers: [publicRead]
Time: 1970-01-01T00:00:00.123Z"
`;

exports[`formatNotificationAsString() should consistently format package version publish notifications 2`] = `
"A package_version_publish was created.

RecordName: test_record
Address: test_id
Version: v1.0.0-tag
RequiresReview: true
Entitlements: [data:shared, file:owned]
Markers: [publicRead]
Time: 1970-01-01T00:00:00.123Z"
`;

exports[`formatNotificationAsString() should consistently format studio comId request notifications 1`] = `
"A comId request was created for test_id:
Request ID: test_id
Studio ID: test_studioId
Requested comID: test_comId
Time: 1970-01-01T00:00:00.123Z
Reporting User: test_userId
Requesting IP: 127.0.0.1"
`;

exports[`formatNotificationAsString() should consistently format unknown notifications 1`] = `
"{
  \\"resource\\": \\"random_request\\",
  \\"action\\": \\"created\\",
  \\"resourceId\\": \\"test_id\\",
  \\"timeMs\\": 123
}"
`;

exports[`formatNotificationAsString() should consistently format user inst report notifications 1`] = `
"A user inst report was created for (null)/test_id:
Report ID: test_id
Time: 1970-01-01T00:00:00.123Z
Reporting User: userId
Reporting IP: 127.0.0.1
Reported URL: test_url
Reported Permalink: test_permalink
Is Automatic Report?: false

Reason: harassment

Text:
test_reason"
`;
